# cpptodo

./: .gitignore  CMakeLists.txt  requirements.txt
incl/: typedefs.h
src/: main.cpp
